# nested-dataclass-serialization

./: README.md  pyproject.toml  pyrightconfig.json  ruff_extension.toml
.github/workflows/: release.yml  tests.yml
nested_dataclass_serialization/: dataclass_hashing.py  dataclass_json_decoding.py  dataclass_json_encoding.py  dataclass_serialization.py  dataclass_serialization_utils.py
tests/: test_dataclass_serialization.py
